--- a/webapp/index.html
+++ b/webapp/index.html
@@ -10,3 +10,14 @@
 </body>
 </html>
 
+<!DOCTYPE html>
+<html>
+<body>
+  <h2>My Favorite Website</h2>
+  <p>Click below to visit Google:</p>
+  <a href="https://www.google.com" target="_blank">Go to Google</a>
+
+  <h3>My Favorite Image</h3>
+  <img src="https://via.placeholder.com/150" alt="Sample Image">
+</body>
+</html>
