commit from monisha

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -10,3 +10,15 @@
 </body>
 </html>
 
+<!DOCTYPE html>
+<html>
+<body>
+  <h2>My To-Do List</h2>
+  <ul>
+    <li>Wake up early</li>
+    <li>Go for a walk</li>
+    <li>Learn HTML</li>
+  </ul>
+</body>
+</html>
+
